--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "Media Player"
   ],
   "scripts": {
-    "start": "live-server"
+    "start": "parcel index.html ejercicios/index.html ejercicios/**/*.html"
   },
   "devDependencies": {
-    "live-server": "^1.2.1"
-  }
+    "parcel-bundler": "^1.12.4"
+  },
+  "dependencies": {}
 }
