--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "start": "parcel index.html ejercicios/index.html ejercicios/**/*.html"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "typescript": "^3.9.5"
   },
+  "browserlist": [
+    "last 1 Chrome version"
+  ],
   "dependencies": {}
 }
